# tiny-card-app

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  misc_stuff.rs
src/mtg_core/: mana_symbol.rs  mod.rs  mtg_card.rs
src/parsers/: resource_loader.rs
src/props/: main_app_props.rs  mod.rs
